--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -39,7 +39,7 @@ jobs:
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
           - os: macos-latest
-            target: aarch64-apple-ios
+            target: x86_64-apple-darwin
     timeout-minutes: 45
     steps:
       - uses: actions/checkout@v3
