--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "lightwallet_core"
+name = "light-wallet-core"
 version = "0.1.0"
 edition = "2021"
 
@@ -13,7 +13,7 @@ crate-type = ["staticlib", "cdylib"]
 uniffi = "0.23.0"
 uniffi_macros = "0.23.0"
 
-lightwallet_keychain = { path = "../keychain" }
+light-wallet-keychain = { path = "../keychain" }
 
 [build-dependencies]
 uniffi_build = { version = "0.23.0", features = ["builtin-bindgen"] }
