--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "eslint": "^7.32.0",
     "eslint-config-custom": "workspace:*",
     "prettier": "^2.5.1",
+    "rome": "12.1.3",
     "turbo": "latest"
   },
   "packageManager": "pnpm@7.15.0"
