--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "rome": "12.1.3",
     "turbo": "latest"
   },
-  "packageManager": "pnpm@7.15.0"
+  "packageManager": "pnpm@7.15.0",
+  "dependencies": {
+    "expo": "^48.0.7"
+  }
 }
