--- a/package.json
+++ b/package.json
@@ -1,18 +1,24 @@
 {
+  "name": "lightdotso",
   "private": true,
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo run dev",
     "lint": "turbo run lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "ci": "rome ci .",
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "test": "echo \"Error: no test specified\""
   },
   "devDependencies": {
     "@turbo/gen": "^1.9.7",
     "eslint": "^7.32.0",
     "eslint-config-custom": "workspace:*",
     "prettier": "^2.5.1",
+    "rome": "12.1.3",
     "turbo": "latest"
   },
   "packageManager": "pnpm@7.15.0",
-  "name": "LightDotSo"
+  "dependencies": {
+    "expo": "^48.0.7"
+  }
 }
