feat: ini license

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "lightdotso",
   "private": true,
+  "license": "GPL-3.0",
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo run dev",
