--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "test": "echo \"Error: no test specified\""
   },
+  "dependencies": {
+    "expo": "^48.0.7"
+  },
   "devDependencies": {
     "@turbo/gen": "^1.9.7",
     "eslint": "^7.32.0",
@@ -18,8 +21,5 @@
     "rome": "12.1.3",
     "turbo": "latest"
   },
-  "packageManager": "pnpm@7.15.0",
-  "dependencies": {
-    "expo": "^48.0.7"
-  }
+  "packageManager": "pnpm@7.15.0"
 }
