--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -23,9 +23,9 @@ jobs:
             test: true
           # - os: ubuntu-latest
           #   target: x86_64-linux-android
-          - os: macos-latest
-            target: x86_64-apple-ios
-            test: false
+          # - os: macos-latest
+          #   target: x86_64-apple-ios
+          #   test: false
           - os: macos-latest
             target: x86_64-apple-darwin
             test: true
