--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -11,7 +11,7 @@ jobs:
       - name: PR Validate
         uses: wallet-rs/wallet-rs/.github/actions/pr-validate@main
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
   pr-check:
     if: always()
     needs:
