--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,18 +1,6 @@
 name: Rust
 on:
-  push:
-    branches:
-      - main
-  pull_request:
-  merge_group:
-concurrency:
-  group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
-  cancel-in-progress: true
-env:
-  RUSTFLAGS: -D warnings
-  CARGO_TERM_COLOR: always
-  TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
-  TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
+  workflow_call:
 jobs:
   rust:
     strategy:
