--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,40 +1,12 @@
 name: PR
 on:
-  push:
-    branches:
-      - main
-  pull_request:
-  merge_group:
-concurrency:
-  group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
-  cancel-in-progress: true
+  pull_request_target:
 jobs:
-  contracts:
-    uses: ./.github/workflows/contracts.yml
-    secrets: inherit
-  node:
-    uses: ./.github/workflows/node.yml
-    secrets: inherit
-  rust:
-    uses: ./.github/workflows/rust.yml
-    secrets: inherit
-  pr-lint:
+  pr:
     name: PR
     runs-on: ubuntu-latest
     steps:
-      - name: Fetch Head
-        uses: actions/checkout@v3
       - name: PR Validate
         uses: wallet-rs/wallet-rs/.github/actions/pr-validate@main
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-  pr-check:
-    if: always()
-    needs:
-      - pr-lint
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check All Green
-        uses: re-actors/alls-green@release/v1
-        with:
-          jobs: ${{ toJSON(needs) }}
