--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -10,17 +10,17 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@tauri-apps/api": "^1.4.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@tauri-apps/api": "^1.4.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/node": "^18.7.10",
-    "@types/react": "^18.0.15",
-    "@types/react-dom": "^18.0.6",
-    "@vitejs/plugin-react": "^3.0.0",
+    "@tauri-apps/cli": "^1.4.0",
+    "@types/node": "^18.16.18",
+    "@types/react": "^18.2.13",
+    "@types/react-dom": "^18.2.6",
+    "@vitejs/plugin-react": "^3.1.0",
     "typescript": "^4.9.5",
-    "vite": "^4.2.1",
-    "@tauri-apps/cli": "^1.4.0"
+    "vite": "^4.3.9"
   }
 }
