--- a/package.json
+++ b/package.json
@@ -11,15 +11,16 @@
     "test": "echo \"Error: no test specified\""
   },
   "dependencies": {
-    "expo": "^48.0.7"
+    "expo": "^48.0.19"
   },
   "devDependencies": {
-    "@turbo/gen": "^1.9.7",
-    "eslint": "^7.32.0",
+    "@turbo/gen": "^1.10.5",
+    "concurrently": "^8.2.0",
+    "eslint": "^8.43.0",
     "eslint-config-custom": "workspace:*",
-    "prettier": "^2.5.1",
+    "prettier": "^2.8.8",
     "rome": "12.1.3",
     "turbo": "latest"
   },
-  "packageManager": "pnpm@7.15.0"
+  "packageManager": "pnpm@8.6.3"
 }
