--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -12,7 +12,7 @@
     "next": "^13.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "ui": "workspace:*"
+    "@lightdotso/ui": "workspace:*"
   },
   "devDependencies": {
     "@types/node": "^17.0.12",
