--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -35,7 +35,7 @@
     "react-native-screens": "^3.20.0",
     "react-native-svg": "13.4.0",
     "react-native-web": "^0.18.12",
-    "ui": "workspace:*"
+    "@lightdotso/ui": "workspace:*"
   },
   "devDependencies": {
     "@babel/core": "^7.17.9",
