--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,10 +1,15 @@
 {
   "name": "@lightdotso/ui",
   "version": "0.0.0",
-  "main": "./index.tsx",
-  "types": "./index.tsx",
-  "license": "MIT",
+  "sideEffects": ["*.css"],
+  "private": true,
+  "types": "./types/index",
+  "main": "src/index.tsx",
+  "module:jsx": "src",
+  "files": ["types", "dist"],
   "scripts": {
+    "build": "tamagui-build",
+    "watch": "tamagui-build --watch",
     "lint": "eslint \"**/*.ts*\"",
     "generate:component": "turbo gen react-component"
   },
@@ -19,6 +24,9 @@
   },
   "dependencies": {
     "@tamagui/react-native-media-driver": "^1.35.8",
+    "@tamagui/toast": "^1.35.8",
+    "@tanstack/react-virtual": "3.0.0-alpha.0",
+    "jotai": "^2.2.1",
     "tamagui": "^1.35.8",
     "typescript": "^5.1.3"
   }
