--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@lightdotso/screens": "workspace:*",
+    "@lightdotso/ui": "workspace:*",
+    "@tamagui/next-plugin": "^1.35.8",
     "next": "^13.4.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@lightdotso/ui": "workspace:*"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.45",
