--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,12 +1,17 @@
 {
   "name": "@lightdotso/ui",
   "version": "0.0.0",
-  "sideEffects": ["*.css"],
+  "sideEffects": [
+    "*.css"
+  ],
   "private": true,
   "types": "./types/index",
   "main": "src/index.tsx",
   "module:jsx": "src",
-  "files": ["types", "dist"],
+  "files": [
+    "types",
+    "dist"
+  ],
   "scripts": {
     "build": "tamagui-build",
     "watch": "tamagui-build --watch",
@@ -23,6 +28,8 @@
     "typescript": "^4.5.2"
   },
   "dependencies": {
+    "@tamagui/config": "^1.35.8",
+    "@tamagui/next-theme": "^1.35.8",
     "@tamagui/react-native-media-driver": "^1.35.8",
     "@tamagui/toast": "^1.35.8",
     "@tanstack/react-virtual": "3.0.0-alpha.0",
