--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -4,17 +4,24 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "TAMAGUI_TARGET=web next build",
     "start": "next start",
+    "serve": "NODE_ENV=production next start --port 8151",
     "lint": "next lint"
   },
   "dependencies": {
     "@lightdotso/screens": "workspace:*",
     "@lightdotso/ui": "workspace:*",
+    "@tamagui/config": "^1.35.8",
+    "@tamagui/next-theme": "latest",
     "@tamagui/next-plugin": "^1.35.8",
-    "next": "^13.4.7",
+    "raf": "^3.4.1",
+    "next": "^13.2.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-native": "^0.71.4",
+    "react-native-web": "^0.18.12",
+    "react-native-web-lite": "latest"
   },
   "devDependencies": {
     "@types/node": "^17.0.45",
