--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -12,9 +12,10 @@
   "dependencies": {
     "@babel/runtime": "^7.22.5",
     "@expo/webpack-config": "^18.1.0",
+    "@lightdotso/screens": "workspace:*",
+    "@lightdotso/ui": "workspace:*",
     "@react-navigation/native": "^6.1.7",
     "@types/react-native": "^0.71.8",
-    "app": "workspace:*",
     "babel-plugin-module-resolver": "^4.1.0",
     "burnt": "^0.10.0",
     "expo": "^48.0.19",
@@ -34,8 +35,7 @@
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "^3.22.0",
     "react-native-svg": "13.4.0",
-    "react-native-web": "^0.18.12",
-    "@lightdotso/ui": "workspace:*"
+    "react-native-web": "^0.18.12"
   },
   "devDependencies": {
     "@babel/core": "^7.22.5",
