--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -12,8 +12,8 @@
   "dependencies": {
     "@babel/runtime": "^7.22.5",
     "@expo/webpack-config": "^18.1.0",
-    "@lightdotso/screens": "workspace:*",
-    "@lightdotso/ui": "workspace:*",
+    "app": "workspace:*",
+    "@my/ui": "workspace:*",
     "@react-navigation/native": "^6.1.7",
     "@tamagui/core": "^1.35.8",
     "@types/react-native": "^0.71.8",
