--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,41 +1,26 @@
 {
-  "name": "@lightdotso/ui",
-  "version": "0.0.0",
-  "sideEffects": [
-    "*.css"
-  ],
+  "name": "@my/ui",
+  "version": "0.0.1",
+  "sideEffects": ["*.css"],
   "private": true,
   "types": "./types/index",
   "main": "src/index.tsx",
   "module:jsx": "src",
-  "files": [
-    "types",
-    "dist"
-  ],
+  "files": ["types", "dist"],
   "scripts": {
     "build": "tamagui-build",
-    "watch": "tamagui-build --watch",
-    "lint": "eslint \"**/*.ts*\"",
-    "generate:component": "turbo gen react-component"
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.13",
-    "@types/react-dom": "^18.2.6",
-    "eslint": "^8.43.0",
-    "eslint-config-custom": "workspace:*",
-    "react": "^18.2.0",
-    "tsconfig": "workspace:*",
-    "typescript": "^4.5.2"
+    "watch": "tamagui-build --watch"
   },
   "dependencies": {
-    "@tamagui/config": "^1.35.8",
-    "@tamagui/core": "^1.35.8",
-    "@tamagui/next-theme": "^1.35.8",
-    "@tamagui/react-native-media-driver": "^1.35.8",
-    "@tamagui/toast": "^1.35.8",
-    "@tanstack/react-virtual": "3.0.0-alpha.0",
-    "jotai": "^2.2.1",
-    "tamagui": "^1.35.8",
-    "typescript": "^5.1.3"
+    "@tamagui/animations-react-native": "latest",
+    "@tamagui/font-inter": "latest",
+    "@tamagui/react-native-media-driver": "latest",
+    "@tamagui/shorthands": "latest",
+    "@tamagui/themes": "latest",
+    "@tamagui/toast": "latest",
+    "tamagui": "latest"
+  },
+  "devDependencies": {
+    "@tamagui/build": "latest"
   }
 }
