--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -12,11 +12,11 @@
   "dependencies": {
     "@babel/runtime": "^7.22.5",
     "@expo/webpack-config": "^18.1.0",
-    "app": "workspace:*",
     "@my/ui": "workspace:*",
     "@react-navigation/native": "^6.1.7",
     "@tamagui/core": "^1.35.8",
     "@types/react-native": "^0.71.8",
+    "app": "workspace:*",
     "babel-plugin-module-resolver": "^4.1.0",
     "burnt": "^0.10.0",
     "expo": "^48.0.19",
@@ -25,8 +25,10 @@
     "expo-font": "^11.1.1",
     "expo-linear-gradient": "^12.1.2",
     "expo-linking": "^4.0.1",
+    "expo-random": "~13.1.1",
     "expo-router": "^1.5.3",
     "expo-splash-screen": "^0.18.2",
+    "expo-standard-web-crypto": "^1.5.0",
     "expo-status-bar": "^1.4.4",
     "expo-updates": "^0.16.4",
     "react": "^18.2.0",
@@ -37,7 +39,8 @@
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-svg": "13.4.0",
-    "react-native-web": "^0.18.12"
+    "react-native-web": "^0.18.12",
+    "uuid": "^3.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.22.5",
