--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -1,25 +1,31 @@
 {
-  "name": "@lightdotso/app",
-  "version": "1.0.0",
+  "name": "next-app",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "TAMAGUI_TARGET=web next build",
     "start": "next start",
+    "serve": "NODE_ENV=production next start --port 8151",
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^13.4.7",
+    "@tamagui/config": "^1.35.8",
+    "@tamagui/next-theme": "latest",
+    "app": "workspace:*",
+    "@my/ui": "workspace:*",
+    "next": "^13.2.4",
+    "raf": "^3.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "ui": "workspace:*"
+    "react-native": "^0.71.4",
+    "react-native-web": "^0.18.12",
+    "react-native-web-lite": "latest",
+    "vercel": "latest"
   },
   "devDependencies": {
-    "@types/node": "^17.0.45",
-    "@types/react": "^18.2.13",
-    "@types/react-dom": "^18.2.6",
-    "eslint-config-custom": "workspace:*",
-    "tsconfig": "workspace:*",
-    "typescript": "^4.9.5"
+    "@tamagui/next-plugin": "latest",
+    "@types/node": "^18.6.4",
+    "eslint-config-next": "^13.0.4"
   }
 }
