--- a/apps/changelog/package.json
+++ b/apps/changelog/package.json
@@ -12,7 +12,7 @@
     "next": "^13.4.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "ui": "workspace:*"
+    "@my/ui": "workspace:*"
   },
   "devDependencies": {
     "@types/node": "^17.0.45",
