--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@babel/runtime": "^7.22.5",
     "@expo/webpack-config": "^18.1.0",
+    "@my/ui": "workspace:*",
     "@react-navigation/native": "^6.1.7",
+    "@tamagui/core": "^1.35.8",
     "@types/react-native": "^0.71.8",
     "app": "workspace:*",
     "babel-plugin-module-resolver": "^4.1.0",
@@ -23,19 +25,22 @@
     "expo-font": "^11.1.1",
     "expo-linear-gradient": "^12.1.2",
     "expo-linking": "^4.0.1",
+    "expo-random": "~13.1.1",
     "expo-router": "^1.5.3",
     "expo-splash-screen": "^0.18.2",
+    "expo-standard-web-crypto": "^1.5.0",
     "expo-status-bar": "^1.4.4",
     "expo-updates": "^0.16.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-native": "^0.71.11",
-    "react-native-gesture-handler": "^2.12.0",
-    "react-native-safe-area-context": "^4.6.3",
-    "react-native-screens": "^3.22.0",
+    "react-native": "^0.71.8",
+    "react-native-gesture-handler": "^2.9.0",
+    "react-native-reanimated": "^2.14.4",
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-screens": "^3.20.0",
     "react-native-svg": "13.4.0",
     "react-native-web": "^0.18.12",
-    "ui": "workspace:*"
+    "uuid": "^3.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.22.5",
@@ -43,7 +48,7 @@
     "@tamagui/babel-plugin": "latest",
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "metro-minify-terser": "^0.74.1",
-    "typescript": "^5.1.3"
+    "typescript": "^4.9.5"
   },
   "resolutions": {
     "metro": "0.76.0",
