--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "private": true,
   "scripts": {
-    "start": "TAMAGUI_TARGET=native npx expo start -c",
+    "start": "expo start --dev-client",
     "android": "TAMAGUI_TARGET=native npx expo run:android",
     "ios": "TAMAGUI_TARGET=native npx expo run:ios",
     "eject": "npx expo eject"
@@ -19,7 +19,8 @@
     "app": "workspace:*",
     "babel-plugin-module-resolver": "^4.1.0",
     "burnt": "^0.10.0",
-    "expo": "^48.0.19",
+    "expo": "~48.0.18",
+    "expo-build-properties": "^0.6.0",
     "expo-constants": "^14.2.1",
     "expo-dev-client": "^2.2.1",
     "expo-font": "^11.1.1",
@@ -27,13 +28,13 @@
     "expo-linking": "^4.0.1",
     "expo-random": "~13.1.1",
     "expo-router": "^1.5.3",
-    "expo-splash-screen": "^0.18.2",
+    "expo-splash-screen": "~0.18.2",
     "expo-standard-web-crypto": "^1.5.0",
     "expo-status-bar": "^1.4.4",
     "expo-updates": "^0.16.4",
-    "react": "^18.2.0",
+    "react": "18.2.0",
     "react-dom": "^18.2.0",
-    "react-native": "^0.71.8",
+    "react-native": "0.71.8",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-reanimated": "^2.14.4",
     "react-native-safe-area-context": "^4.5.0",
@@ -49,10 +50,6 @@
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "metro-minify-terser": "^0.74.1",
     "typescript": "^4.9.5"
-  },
-  "resolutions": {
-    "metro": "0.76.0",
-    "metro-resolver": "0.76.0"
   },
   "overrides": {
     "metro": "0.76.0",
