--- a/package.json
+++ b/package.json
@@ -17,11 +17,19 @@
   "devDependencies": {
     "@turbo/gen": "^1.10.5",
     "concurrently": "^8.2.0",
+    "eas-cli": "^3.14.0",
     "eslint": "^8.43.0",
     "eslint-config-custom": "workspace:*",
     "prettier": "^2.8.8",
     "rome": "12.1.3",
     "turbo": "latest"
+  },
+  "resolutions": {
+    "@expo/config-plugins": "~6.0.0",
+    "@expo/prebuild-config": "~6.0.0",
+    "expo-modules-autolinking": "~1.1.0",
+    "metro": "0.76.0",
+    "metro-resolver": "0.76.0"
   },
   "packageManager": "pnpm@8.6.3"
 }
