--- a/.github/workflows/expo.yml
+++ b/.github/workflows/expo.yml
@@ -18,21 +18,20 @@ jobs:
         uses: actions/checkout@v3
       - name: Node Install
         uses:  wallet-rs/wallet-rs/.github/actions/node-install@main
-      - name: Setup Expo
-        uses: expo/expo-github-action@v8
-        with:
-          expo-cache: true
-          eas-version: latest
-          expo-version: latest
-          token: ${{ secrets.EXPO_TOKEN }}
       - if: github.event_name == 'push'
         name: Build app
+        working-directory: apps/mobile
         run: |
-          eas build --non-interactive
+          pnpm eas build --non-interactive
+        env:
+          EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}
       - if: github.event_name == 'pull_request'
         name: Publish to Expo
+        working-directory: apps/mobile
         run: |
           expo publish --release-channel=pr-${{ github.event.number }} --non-interactive
+        env:
+          EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}
       - if: github.event_name == 'pull_request'
         name: Comment in preview
         uses: expo/expo-github-action/preview-comment@v8
