--- a/.github/workflows/expo.yml
+++ b/.github/workflows/expo.yml
@@ -22,6 +22,13 @@ jobs:
         name: Build app
         working-directory: apps/mobile
         run: |
+          pnpm eas submit --non-interactive
+        env:
+          EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}
+      - if: github.event_name == 'merge_group'
+        name: Build app
+        working-directory: apps/mobile
+        run: |
           pnpm eas build --non-interactive
         env:
           EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}
@@ -32,3 +39,13 @@ jobs:
           pnpm eas update --channel=pr-${{ github.event.number }} --non-interactive --auto
         env:
           EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}
+  expo-check:
+    if: always()
+    needs:
+      - expo
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check All Green
+        uses: re-actors/alls-green@release/v1
+        with:
+          jobs: ${{ toJSON(needs) }}
