--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -35,7 +35,7 @@
       }
     },
     "runtimeVersion": {
-      "policy": "nativeVersion"
+      "policy": "appVersion"
     },
     "owner": "lightdotso",
     "updates": {
