--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -8,73 +8,9 @@ on:
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
   cancel-in-progress: true
-env:
-  RUSTFLAGS: -D warnings
-  CARGO_TERM_COLOR: always
-  TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
-  TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
 jobs:
-  node-build:
-    env:
-      RUSTFLAGS: -D warnings
-    runs-on: ubuntu-latest
-    steps:
-      - name: Fetch Head
-        uses: actions/checkout@v3
-      - name: Install Rust Toolchain (nightly)
-        uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          toolchain: nightly
-          override: true
-      - name: Node Install
-        uses: wallet-rs/wallet-rs/.github/actions/node-install@main
-      - name: Node Build
-        run: |
-          pnpm run build
-  node-lint:
-    env:
-      RUSTFLAGS: -D warnings
-    runs-on: ubuntu-latest
-    steps:
-      - name: Fetch Head
-        uses: actions/checkout@v3
-      - name: Install Rust Toolchain (nightly)
-        uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          toolchain: nightly
-          override: true
-      - name: Node Install
-        uses: wallet-rs/wallet-rs/.github/actions/node-install@main
-      - name: Node Lint
-        run: |
-          pnpm run lint
-  node-test:
-    runs-on: ubuntu-20.04
-    steps:
-      - name: Fetch Head
-        uses: actions/checkout@v3
-      - name: Install Rust Toolchain (nightly)
-        uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          toolchain: nightly
-          override: true
-      - name: Node Install
-        uses:  wallet-rs/wallet-rs/.github/actions/node-install@main
-      - name: Node Test
-        run: |
-          pnpm run test
-  node-check:
-    if: always()
-    needs:
-      - node-build
-      - node-lint
-      - node-test
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check All Green
-        uses: re-actors/alls-green@release/v1
-        with:
-          jobs: ${{ toJSON(needs) }}
+  node:
+    uses: wallet-rs/wallet-rs/.github/workflows/node.yml@main
+    secrets:
+      TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
+      TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
