--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,8 @@ resolver = "2"
 members = [
   "apps/desktop/src-tauri",
   "crates/core",
-  "crates/signer",
+  "crates/keychain",
+  "tools/embedded-uniffi-bindgen"
 ]
 
 # Ref: https://www.uffizzi.com/blog/optimizing-rust-builds-for-faster-github-actions-pipelines
@@ -17,3 +18,6 @@ codegen-units = 16
 lto = true
 opt-level = 2
 codegen-units = 16
+
+[workspace.dependencies]
+uniffi = "0.23.0"
