--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,11 +6,11 @@ plugins {
 }
 
 android {
-    namespace 'android.LightWalletCore'
+    namespace 'android.WalletCore'
     compileSdk 33
 
     defaultConfig {
-        applicationId "android.LightWalletCore"
+        applicationId "android.WalletCore"
         minSdk 24
         targetSdk 33
         versionCode 1
@@ -54,7 +54,7 @@ android.applicationVariants.all { variant ->
     def t = tasks.register("generate${variant.name.capitalize()}UniFFIBindings", Exec) {
         workingDir "${project.projectDir}"
         // Runs the bindings generation, note that you must have uniffi-bindgen installed and in your PATH environment variable
-        commandLine 'cargo', 'uniffi-bindgen', 'generate', "${workingDir}/../crates/core/src/LightWalletCore.udl", '--language', 'kotlin', '--out-dir', uniffiPath
+        commandLine 'cargo', 'uniffi-bindgen', 'generate', "${workingDir}/../crates/core/src/WalletCore.udl", '--language', 'kotlin', '--out-dir', uniffiPath
     }
     variant.javaCompileProvider.get().dependsOn(t)
     def sourceSet = variant.sourceSets.find { it.name == variant.name }
@@ -66,7 +66,7 @@ apply plugin: 'org.mozilla.rust-android-gradle.rust-android'
 cargo {
     module = "../crates/core"
     targetDirectory = "../target"
-    libname = "uniffi_lightwallet_core"
+    libname = "wallet_core"
     targets = ["arm", "arm64", "x86_64"]
     apiLevel = 24 //NDK API level, not SDK
     profile = 'release'
