--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,4 +1,13 @@
 [toolchain]
 channel = "nightly"
+targets = [
+    "aarch64-linux-android",
+    "armv7-linux-androideabi",
+    "i686-linux-android",
+    "x86_64-linux-android",
+    "aarch64-apple-ios",
+    "x86_64-apple-ios",
+    "aarch64-apple-ios-sim",
+]
 profile = "default"
 components = ["clippy", "rustfmt", "rust-src"]
