feat: ini node (#26)
* chore: ini node workflow

* chore: update

* chore: ini ios workflow

* chore: update

* chore: update

* chore: update

* chore: update

* chore: ini gemfile

* chore: update

* chore: update

* feat: ini android

* chore: migration

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: ini node install

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

--- a/.gitignore
+++ b/.gitignore
@@ -186,3 +186,52 @@ dist
 
 # Typings
 types
+
+## User settings
+xcuserdata/
+
+## Xcode 8 and earlier
+*.xcscmblueprint
+*.xccheckout
+
+# Gradle files
+.gradle/
+build/
+
+# Local configuration file (sdk path, etc)
+local.properties
+
+# Log/OS Files
+*.log
+
+# Android Studio generated files and folders
+captures/
+.externalNativeBuild/
+.cxx/
+*.apk
+output.json
+
+# IntelliJ
+*.iml
+.idea/
+misc.xml
+deploymentTargetDropDown.xml
+render.experimental.xml
+
+# Keystore files
+*.jks
+*.keystore
+
+# Google Services (e.g. APIs or Firebase)
+google-services.json
+
+# Android Profiling
+*.hprof
+
+# XCode
+*.ipa
+*.app.dSYM.zip
+*.xcframework
+*.xcarchive
+
+UserInterfaceState.xcuserstate
