--- a/packages/inpage/turbo.json
+++ b/packages/inpage/turbo.json
@@ -4,8 +4,11 @@
   "pipeline": {
     "build": {
       "dependsOn": ["^build"],
-      "inputs": ["**"],
-      "outputs": ["../../ios/LightWalletSafariExtension/Resources/inpage.js"]
+      "outputs": [
+        "../../ios/LightWalletSafariExtension/Resources/inpage.js",
+        "../../apps/extension/chrome/inpage.js",
+        "../../apps/extension/firefox/inpage.js"
+      ]
     },
     "dev": {
       "cache": false,
