--- a/apps/extension/turbo.json
+++ b/apps/extension/turbo.json
@@ -3,7 +3,7 @@
   "extends": ["//"],
   "pipeline": {
     "build": {
-      "outputs": ["dist/**", ".next/**", "!.next/cache/**"],
+      "outputs": ["chrome.zip"],
       "dependsOn": ["^build"]
     },
     "dev": {
