--- a/.github/workflows/extension.yml
+++ b/.github/workflows/extension.yml
@@ -30,7 +30,7 @@ jobs:
           client-id: ${{ secrets.EXTENSION_CLIENT_ID }}
           client-secret: ${{ secrets.EXTENSION_CLIENT_SECRET }}
           refresh-token: ${{ secrets.EXTENSION_REFRESH_TOKEN }}
-  node-check:
+  extension-check:
     if: always()
     needs:
       - extension-build
