chore: ini clean extension

--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -5,7 +5,10 @@
   "scripts": {
     "build": "pnpm run build:chrome && pnpm run build:firefox",
     "build:chrome": "crx pack chrome --zip-output chrome.zip",
-    "build:firefox": "web-ext build -s firefox"
+    "build:firefox": "web-ext build -s firefox",
+    "clean": "pnpm run clean:chrome && pnpm run clean:firefox",
+    "clean:chrome": "rimraf chrome.zip",
+    "clean:firefox": "rimraf web-ext-artifacts"
   },
   "dependencies": {
     "@lightdotso/background": "workspace:*",
