--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "postcss": "^8.4.24",
     "prettier": "^2.8.8",
     "release-it": "^15.11.0",
+    "rimraf": "^5.0.1",
     "tailwindcss": "^3.3.2",
     "turbo": "^1.10.6",
     "typescript": "^5.1.3",
