--- a/.github/workflows/extension.yml
+++ b/.github/workflows/extension.yml
@@ -29,10 +29,12 @@ jobs:
           file-path: apps/extension/chrome.zip
           extension-id: emflafmoooolgldefbdhjeifjnhhhedc
           publish-target: trustedTesters
+          publish: false
           client-id: ${{ secrets.EXTENSION_CLIENT_ID }}
           client-secret: ${{ secrets.EXTENSION_CLIENT_SECRET }}
           refresh-token: ${{ secrets.EXTENSION_REFRESH_TOKEN }}
       - if: github.event_name == 'merge_group'
+        continue-on-error: true
         name: Chrome upload
         uses: mnao305/chrome-extension-upload@v4.0.1
         with:
